tests/semantic/choice/choice.err
Error: Unable to stratify relation(s) {chosen,diffchoice}
Relation diffchoice in file choice.dl at line 34
.decl diffchoice(s:Integer, p:Integer) output 
^----------------------------------------------
has cyclic negation in file choice.dl at line 42
chosen(s, p) :- student(s, m, _), professor(p, m), !diffchoice(s, p).
----------------------------------------------------^-----------------
1 errors generated, evaluation aborted
